Added image generation feature!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#home">AreTaylorAndTravisStillDating.com</a>
     </div>
 
-    <div class="title" style="text-align: center; padding: 10px;"><h1>Are Taylor Swift and Travis Kelce still Dating?</h1></div>
+    <div class="title" style="text-align: center; padding: 20px;"><h1>Are Taylor Swift and Travis Kelce still Dating?</h1></div>
 
     <div class="container">
         <div class="box" id="box1"><img class="image" src="Taylor_Resize.jpg" alt="" width="400"></div>
@@ -24,12 +24,12 @@
             <div class="subcontainer">
                 <div id="yesorno">
                     </div>
-                    <h4 style="text-align: center;" id="dateupdater" onload="loading()"></h4>
                     <div>
                         <button id="button" class="button" onclick="loading()">
                             CHECK
                         </button>
                     </div>
+                    <h4 style="text-align: center;" id="dateupdater" onload="loading()"></h4>
                 </div>
             </div>
         <div class="box" id="box3"><img class="image" src="Kelce_Resize.jpg" alt="" width="400"></div>
@@ -37,7 +37,7 @@
     <script src="script.js"> </script>
 </div>
 
-<div class="datingtime" id="datingtime">
+<div class="datingtime" id="datingtime" style="padding: 15px;">
 </div>
 </body>
 </html>
